--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,4 @@
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -68,6 +69,9 @@ h3 {
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
+
+    --button-primary: 214 27% 33%;
+    --button-primary-foreground: 0 0% 100%;
   }
 
   .dark {
@@ -104,6 +108,9 @@ h3 {
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
+
+    --button-primary: 214 27% 33%;
+    --button-primary-foreground: 0 0% 100%;
   }
 }
 
@@ -143,4 +150,5 @@ h3 {
   transform: scale(1.05);
   box-shadow: var(--shadow);
 }
+
 
